tests/snapshots/schema_cli__schema_steps_list.snap
---
source: tests/schema_cli.rs
expression: pretty
---
{
  "input": {
    "additionalProperties": false,
    "properties": {
      "list": {
        "description": "Look for the task in this list (exact name or ID), which also lets TASK be an exact title",
        "type": "string",
        "x-cli": "--list"
      },
      "task": {
        "description": "The task's ID from `tasks list`, or its exact title when --list is given",
        "type": "string",
        "x-cli": "<TASK>"
      }
    },
    "required": [
      "task"
    ],
    "type": "object"
  },
  "output": {
    "properties": {
      "items": {
        "items": {
          "properties": {
            "checkedDateTime": {
              "description": "When it was checked, while it is",
              "format": "date-time",
              "type": "string"
            },
            "createdDateTime": {
              "format": "date-time",
              "type": "string"
            },
            "displayName": {
              "type": "string"
            },
            "id": {
              "description": "Graph's ID; `local-…` until Microsoft To Do has the step",
              "type": "string"
            },
            "index": {
              "description": "From 1, in Graph's order (the order added): what a STEP argument takes",
              "type": "integer"
            },
            "isChecked": {
              "type": "boolean"
            }
          },
          "required": [
            "index",
            "id",
            "displayName",
            "isChecked"
          ],
          "type": "object"
        },
        "type": "array"
      },
      "schema_version": {
        "const": 2
      },
      "sync": {
        "properties": {
          "generation": {
            "description": "Goes up by one per finished sync of the scope",
            "type": "integer"
          },
          "state": {
            "description": "initial until this scope's first sync finishes: an empty `items` then doesn't mean empty",
            "enum": [
              "initial",
              "ready"
            ]
          }
        },
        "required": [
          "state",
          "generation"
        ],
        "type": "object"
      }
    },
    "required": [
      "schema_version",
      "sync",
      "items"
    ],
    "type": "object"
  }
}
